--- a/career.html
+++ b/career.html
@@ -33,7 +33,7 @@
 
     <section class="areain">
 
-        <h3 class="stitle tc ud1">Career</h3><br><br><br>
+        <h3 class="stitle tc ud1">Career</h3><br><br>
         <div class="container-fluid cc">
             <div class="banner">
                 <!-- <img src="/imhereto/assets/img/banner.jpg" alt=""> -->
