--- a/AIF.html
+++ b/AIF.html
@@ -12,20 +12,19 @@
         <a href="imhere.html#ine" class="backlink "><i class="icon-arrow-right"></i> I Am Here To Section</a>
     </div>
 </section>
-    <section class="areain">
-
-        <h3 class="stitle tc ud1">Alternative Investment Funds</h3><br><br><br>
+    <section >
+<br>
+        <h3 class="stitle tc ud1">Alternative Investment Funds</h3><br><br>
         <div class="container-fluid cc">
             <div class="banner">
-                <!-- <img src="/imhereto/assets/img/banner.jpg" alt=""> -->
             </div>
-           </div> 
-        <div class="container allul areain">
+        </div> 
+        <div class="container  areain">
             <p class="tpara1">AIFs offer an excellent way to diversify the investor’s portfolio across asset classes like equity, debt and real estate and across industries and sectors.</p>
             <p class="tpara1">
                 Product innovation and customized services are the hallmarks of an AIF.
             </p>
-            <h3 class="stitle mt30 mb10">The need for Alternative Investment Funds (AIFs) In India</h3>
+            <h3 class="stitle mt30 mb30">The need for Alternative Investment Funds (AIFs) In India</h3>
             <p class="tpara1">
                 was boosted with the surge in venture capital investments. However, caught in the confusion of many regulations, the Venture Capital Fund (“VCF”) vehicle came to be used by many other funds such as private equity (“PE”), private investment in public equity, real estate, etc., thereby making it difficult to give targeted concessions to VCFs to promote startup or early stage companies.
             </p>
