--- a/Digi_Trader_Web.html
+++ b/Digi_Trader_Web.html
@@ -18,7 +18,7 @@
     </section>
     <section class="areain">
 
-        <h3 class="stitle tc ud1">Digi Trader Web</h3><br><br><br>
+        <h3 class="stitle tc ud1">Digi Trader Web</h3><br><br> 
         <div class="container-fluid cc">
             <div class="banner"></div>
         </div>
