--- a/Equity_Trading.html
+++ b/Equity_Trading.html
@@ -16,7 +16,7 @@
 </section>
     <section class="areain">
 
-        <h3 class="stitle tc ud1">Equity Trading and Investment</h3><br><br><br>
+        <h3 class="stitle tc ud1">Equity Trading and Investment</h3><br><br> 
         <div class="container-fluid cc">
             <div class="banner">
                 <!-- <img src="/imhereto/assets/img/banner.jpg" alt=""> -->
