--- a/Events.html
+++ b/Events.html
@@ -15,7 +15,7 @@
 </section>
     <section class="areain">
 
-        <h3 class="stitle tc ud1">Events</h3><br><br><br>
+        <h3 class="stitle tc ud1">Events</h3><br><br> 
         <div class="container-fluid cc">
             <div class="banner">banner here</div>
            </div>
