--- a/Institutional-Equities.html
+++ b/Institutional-Equities.html
@@ -36,7 +36,7 @@
            <h3 class="stitle  mb10">Institutional Trading</h3>
 
            <ul>
-               <li>1</li>
+               <li>1&nbsp;</li>
                <li>Equity, Cash and Derivatives Institutional Trading</li>
            </ul>
            <ul>
