--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
 
     <section class="area">
 
-        <h3 class="stitle tc ud1">About prabhudas Lilladher</h3><br><br><br>
+        <h3 class="stitle tc ud1">About prabhudas Lilladher</h3><br>
         <div class="container-fluid cc">
             <div class="banner">
                 <!-- <img src="/imhereto/assets/img/banner.jpg" alt=""> -->
