--- a/currency.html
+++ b/currency.html
@@ -16,7 +16,7 @@
 </section>
     <section class="areain">
 
-        <h3 class="stitle tc ud1">Currency</h3><br><br><br>
+        <h3 class="stitle tc ud1">Currency</h3><br><br>
         <div class="container-fluid cc">
             <div class="banner">
                 <img src="assets/img/Currencies_Banners.png" alt="" srcset="">
