--- a/Institutional-Equities.html
+++ b/Institutional-Equities.html
@@ -14,53 +14,45 @@
         <a href="Bussiness_verticals.html" class="backlink "><i class="icon-arrow-right"></i> Back to business verticals</a>
     </div>
 </section>
-    <section class="areain">
+    <section >
 
-        <h3 class="stitle tc ud1">Institutional Equities</h3><br><br><br>
+        <h3 class="stitle topHead tc ud1">Institutional Equities</h3>
         <div class="container-fluid cc">
             <div class="banner">banner here</div>
            </div>
-        <div class="container allul">
-           <p class="tpara1 mt30">
+        <div class="container  areain">
+           <p class="tpara1 ">
             We service over 350 clients comprising domestic mutual funds, insurance companies,
             foreign portfolio investors and private equity firms. Our equity research, sales & trading, and
             corporate access teams help institutional investors from around the world identify
             companies that fit their specific criteria.
            </p>
-           <p class="tpara1 mb30 ">
+           <p class="tpara1 ">
             Our in-depth sectoral reports provide keen insights to credit policies, union budgets and
             regulatory changes. Additionally, value is built through conferences, road shows,
             corporate days and Thought Leadership Series events with experts in India & abroad. We
             conduct 80-100 such events every year.            
            </p>
-           <h3 class="stitle  mb10">Institutional Trading</h3>
-
-           <ul>
-               <li>1&nbsp;</li>
-               <li>Equity, Cash and Derivatives Institutional Trading</li>
-           </ul>
-           <ul>
-            <li>2</li>
-            <li>Direct Market Access for faster trades</li>
-        </ul>
-        <ul>
-            <li>3</li>
-            <li>Proprietary Algorithmic Trading Solutions</li>
-        </ul>
-        <ul>
-            <li>4</li>
-            <li>Highly experienced Derivatives Desk</li>
-        </ul>
-        <ul>
-            <li>5</li>
-            <li>World-class Order routing platforms: Bloomberg, Fidessa, Marco Polo, NYFIX, TNS</li>
-        </ul>
-        <p class="tpara1 mt30">
+        </div>
+<section class=" bggray">
+    <div class="container areain">
+    <h3 class="stitle  ">Institutional Trading</h3>
+    <ul class="noul2">
+        <li>Equity, Cash and Derivatives Institutional Trading</li>
+        <li>Direct Market Access for faster trades</li>
+        <li>Proprietary Algorithmic Trading Solutions</li>
+        <li>Highly experienced Derivatives Desk</li>
+        <li>World-class Order routing platforms: Bloomberg, Fidessa, Marco Polo, NYFIX, TNS</li>
+    </ul>
+    </div>
+</section>
+<div class="container  areain">
+        <p class="tpara1 ">
             Dealing and sales trading are critical last-mile components. Our superior systems,
 processes and technology are not only legally compliant but also ensure a competitive
 business environment.
         </p>
-        <p class="tpara1 mb30">Our trading desk minimises market impact while giving you access to liquidity, thus
+        <p class="tpara1 ">Our trading desk minimises market impact while giving you access to liquidity, thus
             enabling you to execute orders effectively. Our team constantly monitors and scans market
             movements in search of liquidity, news flow and trading strategies, to help you make
             informed decisions on arbitrage, rollovers and other trading opportunities.
