--- a/about.html
+++ b/about.html
@@ -31,9 +31,9 @@
     </div>
 </section>
 
-    <section class="area">
+    <section>
 
-        <h3 class="stitle tc ud1">About prabhudas Lilladher</h3><br>
+        <h3 class="stitle topHead tc ud1">About prabhudas Lilladher</h3>
         <div class="container-fluid cc">
             <div class="banner">
                 <!-- <img src="/imhereto/assets/img/banner.jpg" alt=""> -->
