--- a/derivatives.html
+++ b/derivatives.html
@@ -17,8 +17,7 @@
         </div>
     </section>
     <section class="">
-<br>
-        <h3 class="stitle tc ud1">Technical and Derivatives</h3><br>
+        <h3 class="stitle topHead tc ud1">Technical and Derivatives</h3>
         <div class="container-fluid cc">
             <div class="banner"></div>
         </div>
