--- a/Alternatives.html
+++ b/Alternatives.html
@@ -15,10 +15,10 @@
             <a href="imhere.html" class="backlink "><i class="icon-arrow-right"></i> I Am Here To Section</a>
         </div>
     </section>
-    <section class="areain">
+    <section >
 
-        <h3 class="stitle tc ud1">Alternatives
-</h3><br> 
+        <h3 class="stitle tc topHead">Alternatives
+</h3>
         <div class="container-fluid cc">
             <div class="banner"></div>
         </div>
