--- a/alpha_calls.html
+++ b/alpha_calls.html
@@ -17,11 +17,9 @@
             <a href="imhere.html" class="backlink "><i class="icon-arrow-right"></i> I Am Here To Section</a>
         </div>
     </section>
-    <section class="areain">
+    <section >
 
-        <h3 class="stitle tc ud1">alpha calls
-
-</h3><br> 
+        <h3 class="stitle topHead tc">alpha calls</h3>
         <div class="container-fluid cc">
             <div class="banner"></div>
         </div>
