--- a/Automate_Strategies.html
+++ b/Automate_Strategies.html
@@ -26,7 +26,7 @@
             <p class="tpara1">
                 Why this fancy? The answer is simple – Algos bring about a lot of discipline and predictability that humans (read emotions!) can simply not aim to replicate!
             </p>
-            <h3 class="stitle mt30 ">Introducing Blitz Trader</h3>
+            <h3 class="stitle inHead ">Introducing Blitz Trader</h3>
             <p class="tpara1">
                 Prabhudas Lilladher has tied up with Symphony, a leader in Algo Trading to present our clients and partners with Algorithmic trading facilities using Excel as well as Amibroker. Blitz is capable of talking to any of your programmes as well as communicate instructions to most trading terminals available in India.
             </p>
